feat(branch-service): add pagination support to branch listing